--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "holy-water",
+"name": "holy-water",
+  "homepage": "https://sh1gatsu.github.io/Holy-Water",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,10 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "classnames": "^2.3.2",
+    "gh-pages": "^5.0.0",
+    "moment": "^2.29.4",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -17,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
